--- a/Rcode/length_age_comps/rec_lengthcomps_for_datafile.Rmd
+++ b/Rcode/length_age_comps/rec_lengthcomps_for_datafile.Rmd
@@ -4,26 +4,107 @@ output: html_document
 date: "2025-04-04"
 ---
 
+Use this document as a source for Rec length comp code for pulling data into each of the model runs. I will comment out the code so that it is easy to see what should go into the models.
+
+*a lot of this data has been all uploaded to recfin since the last assessment, but there are sections of older data that dont line up. Is this data entry errors or is this updating old mistakes and putting data together? Should we just use the old + new, or completely replace? however, we cant really compare for some of the old years because we*
+
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+rm(list = ls())
+
+library(dplyr)
+library(tidyr)
+library(ggplot2)
+library(r4ss)
+library(readr)
+library(nwfscSurvey)
+library(pacfintools)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+Read in 2017 model data
+```{r}
+# Get inputs from 2017 assessment that will get carried over to this assessment
+model_2017_path <- file.path("../../model/2017_yelloweye_model_updated_ss3_exe")
+inputs <- SS_read(dir = model_2017_path, ss_new = TRUE)
 ```
 
-## Including Plots
+1. CA_REC, RecFin and Don's data, 1979-2024
+  Remember, we filtered out 2020 data because there was only 1 length available.
+  There was a perfect match for data, so no updates for old data. 
+  Just add the new stuff on top.
+  *still need to fix Nsamps*
+```{r}
+# Use this first section to grab the old data with out any changes!
+ca_rec_len <- inputs$dat$lencomp  |>
+  filter(fleet == 3)
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+## For the Update, add this next section to add data from 2017-2024
+new_ca_rec_len <- read_csv(file.path("../../Data/processed/rec_comps/ca_rec_lengths.csv"))
+names(new_ca_rec_len) <- names(ca_rec_len) # Replace col names so they match everything else
+new_ca_rec_len <- new_ca_rec_len |>
+  filter(year >= 2017) # only grab newest years
+ca_rec_len <- rbind(ca_rec_len,new_ca_rec_len) #put them together
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+2. OR_REC, MRFFS and ORBS combined, 1979-2024
+  There was a *close* match for data, so no updates for old data. 
+  Might be worth investigating these data sources for the future assessment.
+  Did adding data from all these sources to RecFin mess some things up?
+  Just add the new stuff on top.
+  *still need to fix Nsamps*
+
+```{r}
+# Use this first section to grab the old data with out any changes!
+or_rec_len <- inputs$dat$lencomp  |>
+  filter(fleet == 6)
+
+## For the Update, add this next section to add data from 2017-2024
+new_or_rec_len <- read_csv(file.path("../../Data/processed/rec_comps/or_rec_lengths.csv"))
+names(new_or_rec_len) <- names(or_rec_len) # Replace col names so they match everything else
+new_or_rec_len <- new_or_rec_len |>
+  filter(year >= 2017) # only grab newest years
+or_rec_len <- rbind(or_rec_len,new_or_rec_len) #put them together
+```
+
+3. WA_REC, 1981, 1987, 1996-2024
+  There was a *close* match for data, no updates for old data. 
+  Might be worth investigating these data sources for the future assessment.
+  RecFin had a lot more old years that were missing in the last assessment.
+  Just add the new stuff on top....Double check with Vlada
+  *still need to fix Nsamps*
+```{r}
+# Use this first section to grab the old data with out any changes!
+wa_rec_len <- inputs$dat$lencomp  |>
+  filter(fleet == 7)
+
+## For the Update, add this next section to add data from 2017-2024
+new_wa_rec_len <- read_csv(file.path("../../Data/processed/rec_comps/wa_rec_lengths.csv"))
+names(new_wa_rec_len) <- names(wa_rec_len) # Replace col names so they match everything else
+new_wa_rec_len <- new_wa_rec_len |>
+  filter(year >= 2016) # only grab newest years, no data for 2016
+wa_rec_len <- rbind(wa_rec_len,new_wa_rec_len) #put them together
+```
+
+4. CA_OBS, 1987-2024
+  There was a *close* match for data, no updates for old data. 
+  Might be worth investigating these data sources for the future assessment.
+  RecFin was missing a few lengths in the last assessment (2006 and 2007).
+  Just add the new stuff on top....Double check with Vlada
+  *still need to fix Nsamps*
+```{r}
+# Use this first section to grab the old data with out any changes!
+ca_obs_len <- inputs$dat$lencomp  |>
+  filter(fleet == 8)
+
+## For the Update, add this next section to add data from 2017-2024
+new_ca_obs_len <- read_csv(file.path("../../Data/processed/rec_comps/ca_obs_lengths.csv"))
+names(new_ca_obs_len) <- names(ca_obs_len) # Replace col names so they match everything else
+new_ca_obs_len <- new_ca_obs_len |>
+  filter(year >= 2017) # only grab newest years
+ca_obs_len <- rbind(ca_obs_len,new_ca_obs_len) #put them together
+```
+
+4. OR_OBS, 2003-2024
+  There was a perfect match for length data. 
+  However, the Nsamps in the 2017 assessment are whole numbers...but they dont add up to the "total samples"
+  This is good because it means we probably dont have to recalculate Nsamps using the linear model...but what did they do last year that got the numbers off?
+  
