--- a/Rcode/length_age_comps/rec_lengths.Rmd
+++ b/Rcode/length_age_comps/rec_lengths.Rmd
@@ -470,77 +470,80 @@ ggsave(plot = comparison_plot_or, "or_obs_length_comp_comparisons.png", path = f
 Playing with Nsamps predictions
 
 ```{r}
-# Get inputs from 2017 assessment that will get carried over to this assessment
-model_2017_path <- file.path("../../model/2017_yelloweye_model_updated_ss3_exe")
-inputs <- SS_read(dir = model_2017_path, ss_new = TRUE)
-
-# CA_REC comparison and lm line
-ca_rec_len <- inputs$dat$lencomp  |>
-  filter(fleet == 3) |>
-  filter(year >= 2004)
-
-new_ca_rec_len <- read_csv(file.path("../../Data/processed/rec_comps/ca_rec_lengths.csv"))
-new_ca_rec_len <- new_ca_rec_len |>
+# CA_REC
+ca_rec_len <- inputs$dat$lencomp |>
+  filter(fleet == 3, year >= 2004)
+new_ca_rec_len <- read_csv("../../Data/processed/rec_comps/ca_rec_lengths.csv") |>
   filter(year <= 2016)
 
-compare_input_ca <- as.data.frame(cbind(ca_rec_len$Nsamp,new_ca_rec_len$input_n))
-model_ca <- lm(compare_input_ca$V1 ~ compare_input_ca$V2)
-model_ca
-ggplot(compare_input_ca, aes(V2,V1))+
-  geom_point() +
-  geom_smooth(method = lm, se = TRUE, col = 'red')
+ca_df <- data.frame(
+  Nsamp = ca_rec_len$Nsamp,
+  input_n = new_ca_rec_len$input_n,
+  group = "CA_REC"
+)
 
-# OR_REC comparison and lm line
-or_rec_len <- inputs$dat$lencomp  |>
-  filter(fleet == 6) |>
-  filter(year >= 2004)
-
-new_or_rec_len <- read_csv(file.path("../../Data/processed/rec_comps/or_rec_lengths.csv"))
-new_or_rec_len <- new_or_rec_len |>
+# OR_REC
+or_rec_len <- inputs$dat$lencomp |>
+  filter(fleet == 6, year >= 2004)
+new_or_rec_len <- read_csv("../../Data/processed/rec_comps/or_rec_lengths.csv") |>
   filter(year <= 2016)
 
-compare_input_or <- as.data.frame(cbind(or_rec_len$Nsamp,new_or_rec_len$input_n))
-model_or <- lm(compare_input_or$V1 ~ compare_input_or$V2)
-model_or
-ggplot(compare_input_or, aes(V2,V1))+
-  geom_point() +
-  geom_smooth(method = lm, se = TRUE, col = 'orange')
+or_df <- data.frame(
+  Nsamp = or_rec_len$Nsamp,
+  input_n = new_or_rec_len$input_n,
+  group = "OR_REC"
+)
 
-# WA_REC comparison and lm line
-wa_rec_len <- inputs$dat$lencomp  |>
-  filter(fleet == 7) |>
-  filter(year >= 1998)
+# WA_REC
+wa_rec_len <- inputs$dat$lencomp |>
+  filter(fleet == 7, year >= 1998)
+new_wa_rec_len <- read_csv("../../Data/processed/rec_comps/wa_rec_lengths.csv") |>
+  filter(year >= 1998, year <= 2016)
 
-new_wa_rec_len <- read_csv(file.path("../../Data/processed/rec_comps/wa_rec_lengths.csv"))
-new_wa_rec_len <- new_wa_rec_len |>
-  filter(year <= 2016 & year >= 1998)
+wa_df <- data.frame(
+  Nsamp = wa_rec_len$Nsamp,
+  input_n = new_wa_rec_len$input_n,
+  group = "WA_REC"
+)
 
-compare_input_wa <- as.data.frame(cbind(wa_rec_len$Nsamp,new_wa_rec_len$input_n))
-model_wa <- lm(compare_input_wa$V1 ~ compare_input_wa$V2)
-model_wa
-ggplot(compare_input_wa, aes(V2,V1))+
-  geom_point() +
-  geom_smooth(method = lm, se = TRUE, col = 'darkgreen')
+# CA_OBS
+ca_obs_len <- inputs$dat$lencomp |>
+  filter(fleet == 8, year >= 2008)
+new_ca_obs_len <- read_csv("../../Data/processed/rec_comps/ca_obs_lengths.csv") |>
+  filter(year >= 2008, year <= 2016)
 
-# CA_OBS comparision lm line
-ca_obs_len <- inputs$dat$lencomp  |>
-  filter(fleet == 8)|>
-  filter(year >= 2008)
+ca_obs_df <- data.frame(
+  Nsamp = ca_obs_len$Nsamp,
+  input_n = new_ca_obs_len$input_n,
+  group = "CA_OBS"
+)
 
-new_ca_obs_len <- read_csv(file.path("../../Data/processed/rec_comps/ca_obs_lengths.csv"))
-new_ca_obs_len <- new_ca_obs_len |>
-  filter(year <= 2016 & year >= 2008)
+# OR_OBS
+ # Dont need to do OR_OBS because I'm pretty sure they used "total samples" for Nsamps in 2017...but they were wrong...? ask Vlada
 
-compare_input_ca_obs <- as.data.frame(cbind(ca_obs_len$Nsamp,new_ca_obs_len$input_n))
-model_ca_obs <- lm(compare_input_ca_obs$V1 ~ compare_input_ca_obs$V2)
-model_ca_obs
-ggplot(compare_input_ca_obs, aes(V2,V1))+
-  geom_point() +
-  geom_smooth(method = lm, se = TRUE, col = 'blue')
+# Combine all data
+all_data <- bind_rows(ca_df, or_df, wa_df, ca_obs_df)
 
+# Plot everything in one ggplot
+library(ggpmisc)
 
+ggplot(all_data, aes(x = input_n, y = Nsamp, color = group)) +
+  geom_point(size = 2) +
+  geom_smooth(method = "lm", se = TRUE) +
+  stat_poly_eq(
+    aes(label = after_stat(paste(eq.label, rr.label, sep = "~~~"))),
+    formula = y ~ x,
+    parse = TRUE,
+    size = 3
+  ) +
+  #facet_wrap(~group, scales = "free") +
+  theme_minimal() +
+  labs(
+    title = "Individual Linear Models: Nsamp vs input_n",
+    x = "input_n",
+    y = "Nsamp"
+  ) +
+  theme(legend.position = "none")
 ```
-
-
 
 
